# $Id$

library_includedir=${includedir}/${LIBRARY_NAME}

#we could use the following line instead to allow for numerous version to be installed
#but its a bit overkill at the moment
#library_includedir=$(includedir)/$(LIBRARY_NAME)-$(LIBRARY_RELEASE)/$(LIBRARY_NAME)

library_include_HEADERS = \
	AbstractShape.h \
	BitHack.h \
	Closure.h \
	Dimension.h \
	Enum.h \
	Exception.h \
	InetAddress.h \
	InetException.h \
	NamedPipe.h \
	NamedPipeException.h \
	Point.h \
	Rectangle.h \
	RefCountPtr.h \
	ServerSocket.h \
	Socket.h \
	SocketException.h \
	Stateable.h \
	StateHandler.h \
	StateNode.h \
	XMLStateHandler.h \
	XMLStateNode.h




